<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="label_glide_download">Glide - Image Loading Library By BumpTech</string>
    <string name="label_udacity_download">LoadApp  - Current Repository By Udacity</string>
    <string name="label_retrofit_download">Retrofit TypeSafe HTTP Client for Android and Java by Square, Inc</string>
    <string name="download">Download</string>
    <string name="we_are_loading">We are loading</string>
    <string name="alert_no_file_selected">Please select a file to download.</string>
    <string name="download_complete">Download complete</string>
    <string name="channel_id_download_complete">channel_id_download_complete</string>
    <string name="channel_name_download_complete">Download complete</string>
    <string name="file_name">"File Name: "</string>
    <string name="status">Status: </string>
    <string name="failure">Failure</string>
    <string name="success">Success</string>
    <string name="ok">OK</string>
    <string name="notif_button_label">Check for status</string>
</resources>
