<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radioButtonGlide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_glide_download"
            style="@style/RadioButtonStyle"/>

        <RadioButton
            android:id="@+id/radioButtonCurrentRepo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_udacity_download"
            style="@style/RadioButtonStyle"/>

        <RadioButton
            android:id="@+id/radioButtonRetrofitRepo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_retrofit_download"
            style="@style/RadioButtonStyle"/>

    </RadioGroup>

    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>